--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,7 +8,7 @@
     // overflow: auto;
     height: auto;
     min-height: $body-height;
-    height: calc(100vh - $header-height);
+    // height: calc(100vh - $header-height);
 
     display: flex;
     flex-direction: column;
